syntax = "proto3";
option java_multiple_files = true;
package com.example.seller;

message ProtoSeller {
  string firstName = 1;
  string lastName = 2;
}

message ProtoThing {
  string name = 1;
  string size = 2;
  string condition = 3;
  double price = 4;
}

message GetRequestSeller{

}

message GetResponseSeller {
  repeated ProtoSeller sellers = 1;
}


message GetRequestThing{

}

message GetResponseThing {
  repeated ProtoThing things = 1;
}


message CreateRequest{
  string serveJson = 1;
}

message CreateResponse {
}


service sellerService {
  rpc getSellers(GetRequestSeller) returns (GetResponseSeller);
  rpc getThings(GetRequestThing) returns (GetResponseThing);
  rpc create(CreateRequest) returns (CreateResponse);
}